--- a/product.html
+++ b/product.html
@@ -26,7 +26,10 @@
                         <li class="nav-item"><a class="nav-link" aria-current="page" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="Python4.html">DATA</a></li>
                         <li class="nav-item"><a class="nav-link" href="Java2.html">Account Aanmaken</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Java.html">Product toevoegen</a></li>
+                        <li class="nav-item"><a class="nav-link" href="login.html">login</a></li>
                         <li class="nav-item"><a class="nav-link active" href="product.html">Product</a></li>
+
                     </ul>
                  <form class="d-flex">
                     <div class="dropdown" id="shopping-cart-dropdown">
