--- a/Java2.html
+++ b/Java2.html
@@ -21,7 +21,9 @@
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="Python4.html">DATA</a></li>
                     <li class="nav-item"><a class="nav-link active" href="Java2.html">Account Aanmaken</a></li>
-                    <li class="nav-item"><a class="nav-link" href="product.html">Product</a></li>
+                    <!-- <li class="nav-item"><a class="nav-link" href="product.html">Product</a></li> -->
+                    <li class="nav-item"><a class="nav-link" href="Java.html">Product toevoegen</a></li>
+                    <li class="nav-item"><a class="nav-link" href="login.html">login</a></li>
                    
                    
                     <!-- <li class="nav-item dropdown">
