rogier laatste push index

--- a/login.html
+++ b/login.html
@@ -120,14 +120,15 @@
         console.log('Response status text:', response.statusText);
 
         if (response.ok) {
-          const text = await response.text();
+          const data = await response.json();
 
-          console.log('Response content:', text);
+          console.log('Response content:', data);
 
-          if (text.trim() === "") {
+          if (!data) {
             alert('Login failed. Invalid credentials.');
           } else {
-            localStorage.setItem('token', text);
+            localStorage.setItem('token', data.token);
+            localStorage.setItem('accountId', data.id);
             window.location.href = 'index.html';
           }
         } else {
