--- a/product.html
+++ b/product.html
@@ -122,7 +122,7 @@
             function addProductToShoppingCart () {
                 let amount = parseInt(document.getElementById('product-amount-input').value);
 
-                addShoppingCartEntry(1, productId, amount);
+                addShoppingCartEntry(productId, amount);
             }
 
             window.addEventListener("DOMContentLoaded", (event) => {
