nieuwe logout button

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
                         <li class="nav-item"><a class="nav-link" href="Python4.html">DATA</a></li>
                         <li class="nav-item"><a class="nav-link" href="Java2.html">Account Aanmaken</a></li>
                         <!-- <li class="nav-item"><a class="nav-link" href="product.html">Product</a></li> -->
-                        <li class="nav-item"><a class="nav-link" href="Java.html">Product toevoegen</a></li>
-                        <li class="nav-item"><a class="nav-link" href="login.html">login</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Java.html">Product Toevoegen</a></li>
+                        <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+                        <li class="nav-item"><a class="nav-link" style= "cursor: pointer;" onclick="localStorage.clear(); window.location.href='index.html'">Logout</a></li>
                        
                        
                         <!-- <li class="nav-item dropdown">
