--- a/product.html
+++ b/product.html
@@ -26,10 +26,10 @@
                         <li class="nav-item"><a class="nav-link" aria-current="page" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="Python4.html">DATA</a></li>
                         <li class="nav-item"><a class="nav-link" href="Java2.html">Account Aanmaken</a></li>
-                        <li class="nav-item"><a class="nav-link" href="Java.html">Product toevoegen</a></li>
-                        <li class="nav-item"><a class="nav-link" href="login.html">login</a></li>
                         <li class="nav-item"><a class="nav-link active" href="product.html">Product</a></li>
-
+                        <li class="nav-item"><a class="nav-link" href="Java.html">Product Toevoegen</a></li>
+                        <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+                        <li class="nav-item"><a class="nav-link" style= "cursor: pointer;" onclick="localStorage.clear(); window.location.href='index.html'">Logout</a></li>
                     </ul>
                  <form class="d-flex">
                     <div class="dropdown" id="shopping-cart-dropdown">
@@ -134,5 +134,9 @@
                 fillProductDetails();
             });
         </script>
+        <!-- Footer-->
+        <footer class="py-5 bg-dark">
+            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Young Capital NEXT 2023</p></div>
+        </footer>
     </body>
 </html>
