--- a/Java.html
+++ b/Java.html
@@ -30,7 +30,7 @@
 
             data.forEach(row => {
                 const newRow = document.createElement('tr');
-                const columnsToDisplay = ["id", "leverancier",	"naam",	"categorie",	"maat",	"prijs",	"productbeschrijving",	"productfoto",	"voorraad"];
+                const columnsToDisplay = ["id", "leverancier", "naam", "categorie", "maat",	"prijs", "productbeschrijving",	"voorraad"];
 
                 columnsToDisplay.forEach(column => {
                     const cell = document.createElement('td');
